--- a/Virtual Tourist/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/Base.lproj/Main.storyboard
@@ -97,7 +97,7 @@
                                     <inset key="sectionInset" minX="4" minY="4" maxX="4" maxY="4"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FlickrPhotoCell" id="VHw-Iy-FaZ">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FlickrPhotoCell" id="VHw-Iy-FaZ" customClass="FlickrPhotoCollectionViewCell" customModule="Virtual_Tourist" customModuleProvider="target">
                                         <rect key="frame" x="4" y="4" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -121,6 +121,10 @@
                                             <constraint firstAttribute="trailing" secondItem="LGD-ie-fLG" secondAttribute="trailing" id="qwg-73-KCU"/>
                                             <constraint firstAttribute="bottom" secondItem="LGD-ie-fLG" secondAttribute="bottom" id="yds-wf-hHf"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="activity" destination="imc-eF-A8u" id="9fH-QC-qVY"/>
+                                            <outlet property="flickrImage" destination="LGD-ie-fLG" id="vq2-WB-5Z1"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
